test/visibility/import/enablesUnqualified/forwarding-containerListed2.good
forwarding-containerListed2.chpl:30: In function 'main':
forwarding-containerListed2.chpl:32: error: unresolved call 'Container.tertiaryMethod()'
forwarding-containerListed2.chpl:32: note: because no functions named tertiaryMethod found in scope
